--- a/des157/index.html
+++ b/des157/index.html
@@ -45,7 +45,7 @@
 
             <h2>Experiments</h2>
             <ul>
-                <li><a href="#">Exp 1</a></li>
+                <li><a href="JSfunctDOM.html">Exp: DOM</a></li>
             </ul>
         </section>
             
