--- a/des157/studio1/index.html
+++ b/des157/studio1/index.html
@@ -13,23 +13,23 @@
 <body>
     <header>
         <h1>MAD LIB</h1>
-        <p>yeehaw</p>
+        <p id="yeehaw">yeehaw</p>
     </header>
 
     <main>
         <img src="images/cactus.png" alt="bg cacti">
         
         <form id="myForm">
-            <label for="noun1">Enter a adjective</label>
+            <label for="noun1">Enter a noun</label>
             <input type="text" id="noun1" required>
 
-            <label for="noun2">Enter a name</label>
+            <label for="noun2">Enter a noun</label>
             <input type="text" id="noun2" required>
 
-            <label for="adj1">Enter a noun</label>
+            <label for="exc1">Enter a exclamation</label>
             <input type="text" id="adj1" required>
 
-            <label for="verb1">Enter a exclamation</label>
+            <label for="food1">Enter a food</label>
             <input type="text" id="verb1" required>
 
             <input id="subButton" type="submit" value="submit">
@@ -42,7 +42,7 @@
 
         <div>
             <!-- <input id="upButton" type="submit" value="enter"> -->
-            <p>Also I'll probably have a button to bring the user back to the top of the page</p>
+            <p id="toTop">Back to top?</p>
         </div>
     </main>
 
