--- a/des157/lj/index.html
+++ b/des157/lj/index.html
@@ -21,6 +21,14 @@
 
     <main>
         <article>
+            <h2>Learning Journal 3</h2>
+
+            <p>I thought the article was pretty insightful; overall, it felt like an encouragement of critical thinking skills applied to visual analyzing. The website I found (from <a href="https://www.awwwards.com/">awwwards.com</a>), <a href="https://levonaronian.com/">Levon Aronian</a>, was pretty interesting. It is very clearly grid-like (there are actual grid-like lines all across the page delineating where content lies), but also uses visual icons that break the grid structure.</p> 
+
+            <p>On the home page, the rotating chess piece is very engaging. It appears to reflect “LEVON” and some grid lines. The about page has just pictures, which again fall within the grid lines, but also have interesting borders/cutouts. The fun page utilizes a variety of icons/images that appear above/outside of the grid, adding an element of dimension/variety. Overall, I thought that it was an interesting website that balanced simplicity with some unexpected elements.</p>
+            
+        </article>
+        <article>
             <h2>Learning Journal 2</h2>
             <p>Viewing modals as annoying does make sense, most people don't enjoy the popups (ads, reminders, etc.). I also recall some annoyance with popups, remembering one time while playing a game getting a popup for some Adobe update or something, and this resulting in me dying in game (unfortunate, haha). I did find it interesting that they noted to "not use [modals] to show error, success or warning messages." I thought perhaps because considering people's annoyance at modals and instinct to ignore/immediately quit out of the popup would not be good for showing the user important information.</p>
 
