--- a/des157/lj/index.html
+++ b/des157/lj/index.html
@@ -20,6 +20,26 @@
     </header>
 
     <main>
+
+        <article>
+            <h2>Learning Journal 4</h2>
+
+            <figure id="tea">
+                <img src="images/tea.jpg" alt="tea">
+                <figcaption>Emma Choi, 2020</figcaption>
+            </figure>
+            <p>I find the image interesting because of how the light going through the tea makes it look like different colors/etc. Honestly, mostly chose this pic because it was ~aesthetic~. The rest of my pics are even more bland than this.</p>
+            <p>This pic is relevant to my collection because it is a cup of tea, and my collection is of tea from various places. This place in particular, RareTea, was my regular place to go when I was in Davis. Now that I'm back home, we do have a RareTea, but there are tons of other locations as well.</p>
+            <p>What does this say about me? Well, I like tea. Yea.</p>
+
+            <figure id="plant">
+                <img src="images/plant.jpg" alt="plant">
+                <figcaption>Anthony Chow, 2021(?)</figcaption>
+            </figure>
+            <p><br>From what I gather, this image shows a few of Anthony's plants. I am not knowledgable in the realm of flora but from what I observe, these plants may be of the same species(?) or are related in some sense, because they look similar. I like that they look similar but are different colors, that's a nice effect.</p>
+            <p>I am curious to learn more about these plants; perhaps what is their backstory? What kind of plant are they? </p>
+        </article>
+
         <article>
             <h2>Learning Journal 3</h2>
 
@@ -28,6 +48,7 @@
             <p>On the home page, the rotating chess piece is very engaging. It appears to reflect “LEVON” and some grid lines. The about page has just pictures, which again fall within the grid lines, but also have interesting borders/cutouts. The fun page utilizes a variety of icons/images that appear above/outside of the grid, adding an element of dimension/variety. Overall, I thought that it was an interesting website that balanced simplicity with some unexpected elements.</p>
             
         </article>
+
         <article>
             <h2>Learning Journal 2</h2>
             <p>Viewing modals as annoying does make sense, most people don't enjoy the popups (ads, reminders, etc.). I also recall some annoyance with popups, remembering one time while playing a game getting a popup for some Adobe update or something, and this resulting in me dying in game (unfortunate, haha). I did find it interesting that they noted to "not use [modals] to show error, success or warning messages." I thought perhaps because considering people's annoyance at modals and instinct to ignore/immediately quit out of the popup would not be good for showing the user important information.</p>
