--- a/des157/studio2/index.html
+++ b/des157/studio2/index.html
@@ -39,11 +39,11 @@
 
 
         <div id="pics">
-            <div id="one" class="pic"><img src="images/fantasia.png"></div>
-            <div id="two" class="pic"><img src="images/teaera.png"></div>
-            <div id="three" class="pic"><img src="images/rareTea.png"></div>
-            <div id="four" class="pic"><img src="images/happyl.png"></div>
-            <div id="five" class="pic"><img src="images/gongcha.png"></div>
+            <div id="one" class="pic"><img src="images/fantasia.png" alt="fantasia"></div>
+            <div id="two" class="pic"><img src="images/teaera.png" alt="teaera"></div>
+            <div id="three" class="pic"><img src="images/rareTea.png" alt="raretea"></div>
+            <div id="four" class="pic"><img src="images/happyl.png" alt="happylemon"></div>
+            <div id="five" class="pic"><img src="images/gongcha.png" alt="gongcha"></div>
         </div>
     </main>
     
