--- a/des157/studio2/index.html
+++ b/des157/studio2/index.html
@@ -34,7 +34,7 @@
         </div>
         
 
-        <img src="images/face1.png" id="face">
+        <img src="images/face1.png" alt="figure" id="face">
         <div id="tea"></div>
 
 
