--- a/des157/lj/index.html
+++ b/des157/lj/index.html
@@ -22,6 +22,13 @@
     <main>
 
         <article>
+            <h2>Learning Journal 5</h2>
+
+            <p>I think this <a href="https://uxplanet.org/game-design-ux-best-practices-guide-4a3078c32099">article</a> brought up a lot of things that you will come across in games, but aren't necessarily thinking about while you play. With things like pop ups, having a dim background is almost always the case, and makes sense design-wise. The dimming of the background draws more attention to the pop up, and gives a sense of depth that highlights it.</p>
+            <p>Other things, like store dialog, highlight a lot of points that target interaction with the user, and how to engage them further. For example, having a presenter makes it feel more personal, and putting important titles/info at larger sizes/more emphasized brings attention to them.</p>
+        </article>
+
+        <article>
             <h2>Learning Journal 4</h2>
 
             <figure id="tea">
