--- a/des157/index.html
+++ b/des157/index.html
@@ -40,7 +40,7 @@
                 <li><a href="lj">Learning Journal</a></li>
                 <li><a href="studio1">Mad Libs 2.0</a></li>
                 <li><a href="studio2">Every Picture</a></li>
-                <li><a href="#">Game On!</a></li>
+                <li><a href="pig-START">Game On!</a></li>
             </ul>
 
             <h2>Experiments</h2>
