--- a/des157/index.html
+++ b/des157/index.html
@@ -6,7 +6,8 @@
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
 
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400&family=Spartan&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@200;400&display=swap" rel="stylesheet">
 
     <link href="styles.css" rel="stylesheet">
  
@@ -30,10 +31,6 @@
 
     <main>
         <section class="sect" id="ex">
-            <h2>Final</h2>
-            <ul>
-                <li><a href="#">Final Project</a></li>
-            </ul>
             
             <h2>Studios</h2>
             <ul>
@@ -50,29 +47,16 @@
         </section>
             
         <section class="sect">
-            <h2>Research</h2>
+            <h2>R&D</h2>
             <ul>
-                <li><a href="#">Annotated Bibliography</a></li>
-                <li><a href="#">Comparative Analysis</a></li>
-                <li><a href="#">Interview Subject</a></li>
-                <li><a href="#">Interview Questions</a></li>
-                <li><a href="#">Transcripiton/Reflection</a></li>
-                <li><a href="#">Visual Research</a></li>
+                <li><a href="final/brief.html">Project Brief</a></li>
             </ul>
         </section>
 
         <section class="sect">
-            <h2>Development</h2>
+            <h2>Final</h2>
             <ul>
-                <li><a href="#">Brainstorm</a></li>
-                <li><a href="#">Storyboard</a></li>
-                <li><a href="#">Wireframe Sketch</a></li>
-                <li><a href="#">Interactive Wireframe</a></li>
-                <li><a href="#">Comps</a></li>
-                <li><a href="#">Prototype 1</a></li>
-                <li><a href="#">Prototype 2</a></li>
-                <li><a href="#">Audience Testing</a></li>
-                <li><a href="#">Presentation</a></li>
+                <li><a href="#">Final Project</a></li>
             </ul>
         </section>
     </main>
