--- a/des157/index.html
+++ b/des157/index.html
@@ -50,6 +50,7 @@
             <h2>R&D</h2>
             <ul>
                 <li><a href="final/brief.html">Project Brief</a></li>
+                <li><a href="final/comp.png">Digital Comp</a></li>
             </ul>
         </section>
 
