--- a/des157/index.html
+++ b/des157/index.html
@@ -51,6 +51,7 @@
                 <li><a href="final/brief.html">Project Brief</a></li>
                 <li><a href="final/comp.png">Digital Comp</a></li>
                 <li><a href="final/refinedcomp.png">Refined Comp</a></li>
+                <li><a href="final/proto/index.html">Prototype</a></li>
             </ul>
         </section>
 
