--- a/des157/index.html
+++ b/des157/index.html
@@ -52,6 +52,7 @@
                 <li><a href="final/comp.png">Digital Comp</a></li>
                 <li><a href="final/refinedcomp.png">Refined Comp</a></li>
                 <li><a href="final/proto/index.html">Prototype</a></li>
+                <li><a href="final/usertest/index.html">User Test</a></li>
             </ul>
         </section>
 
