--- a/des157/final/usertest/index.html
+++ b/des157/final/usertest/index.html
@@ -29,7 +29,7 @@
             <section id="second">
                 <p>Check out the bar on the bottom</p>
                 <p>Click below to find out more about each tea place!</p>
-                <p>Sorry if this isn't too interesting lol</p>
+                <p>This stuff will be replaced w/ info like my order, etc.</p>
             </section>
         </div>
         
