--- a/des157/index.html
+++ b/des157/index.html
@@ -53,6 +53,7 @@
                 <li><a href="final/refinedcomp.png">Refined Comp</a></li>
                 <li><a href="final/proto/index.html">Prototype</a></li>
                 <li><a href="final/usertest/index.html">User Test</a></li>
+                <li><a href="final/usertest-results.html">User Test Results</a></li>
             </ul>
         </section>
 
