--- a/des157/index.html
+++ b/des157/index.html
@@ -60,7 +60,7 @@
         <section class="sect">
             <h2>Final</h2>
             <ul>
-                <li><a href="#">Final Project</a></li>
+                <li><a href="final/finalproject/">Final Project</a></li>
             </ul>
         </section>
     </main>
