--- a/des157/index.html
+++ b/des157/index.html
@@ -62,6 +62,9 @@
             <ul>
                 <li><a href="final/finalproject/">Final Project</a></li>
             </ul>
+            <ul>
+                <li><a href="final/portfoliosite/">Portfolio</a></li>
+            </ul>
         </section>
     </main>
 
