--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400&family=Spartan&display=swap" rel="stylesheet">
+    
     <link href="styles.css" rel="stylesheet">
     <title>Github</title>
 </head>
