--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
 
         <div class="descDiv">
             <p class="desc">I graduated from UC Davis 2021 with a degree in Design + minor in Computer Science. I'm open to learning more about just about any design field. I personally enjoy illustrating, for projects or in my free time. </p>
-            <p class="desc">As seen in this site, I have a basic knowledge of HTML/CSS/JS. It's been a while, but in terms of programming I have learned a bit in Python and C++.</p>
+            <p class="desc">As seen in this site, I have a basic knowledge of HTML/CSS/JS. It's been a while, but in terms of programming I have learned a bit in Python and C++. I am somewhat familiar with Adobe Photoshop, Illustrator, InDesign, After Effects, and Premier. (I am most familiar with Photoshop for illustration.)</p>
             <p class="desc">That's tea in the drawing, because I quite enjoy tea (unsweetened oolong with light ice is where it's at).</p>
         </div>
         
