--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
             <div id="links">
                 <a href="https://www.instagram.com/emchoi_des/" class="links"><i class="fab fa-instagram-square"></i></a>
                 <a href="https://www.linkedin.com/in/emma-choi-35806b200/" class="links"><i class="fab fa-linkedin"></i></a>
-                <a href="resume.pdf" class="links"><i class="far fa-file-alt"></i></a>
+                <a href="Resume.pdf" class="links"><i class="far fa-file-alt"></i></a>
                 
             </div>
 
