--- a/fashion.html
+++ b/fashion.html
@@ -43,38 +43,32 @@
     </header>
 
     <main>
-        <section class="proj">
-            <a href="graphic.html">
-                <img src="images/gs.png" alt="graphic standard" class="imgs">
-                <p id="gsTitle" class="imgTitle">graphic design</p>
-            </a>
-        </section>
 
         <section class="proj">
-            <a href="fashion.html">
+            <a href="rtr.html">
                 <img src="images/fashion.png" alt="fashion des" class="imgs">
-                <p class="imgTitle">fashion design</p>
+                <p class="imgTitle">runway to reality</p>
             </a>
         </section>
 
         <section class="proj">
-            <a href="tea.html">
-                <img src="images/tea.png" alt="tea" class="imgs">
-                <p class="imgTitle">interactive site</p>
+            <a href="shoe.html">
+                <img src="images/shoe.png" alt="shoe" class="imgs">
+                <p class="imgTitle">oryx boots</p>
             </a>
         </section>
 
         <section class="proj">
-            <a href="illust.html">
-                <img src="images/winter.png" alt="winter" class="imgs">
-                <p class="imgTitle">illustrations</p>
+            <a href="coral.html">
+                <img src="images/cor.png" alt="hunt" class="imgs">
+                <p class="imgTitle">coral huntress</p>
             </a>
         </section>
-        
+
         <section class="proj">
-            <a href="crafts.html">
-                <img src="images/pirate.png" alt="pcave" class="imgs">
-                <p class="imgTitle">paper crafts</p>
+            <a href="waterc.html">
+                <img src="images/wc.JPG" alt="watercolor" class="imgs">
+                <p class="imgTitle">fashion inspiration</p>
             </a>
         </section>
 
