--- a/graphic.html
+++ b/graphic.html
@@ -44,37 +44,16 @@
 
     <main>
         <section class="proj">
-            <a href="graphic.html">
+            <a href="gs.html">
                 <img src="images/gs.png" alt="graphic standard" class="imgs">
-                <p id="gsTitle" class="imgTitle">graphic design</p>
+                <p class="imgTitle">graphic standard</p>
             </a>
         </section>
 
         <section class="proj">
-            <a href="fashion.html">
-                <img src="images/fashion.png" alt="fashion des" class="imgs">
-                <p class="imgTitle">fashion design</p>
-            </a>
-        </section>
-
-        <section class="proj">
-            <a href="tea.html">
-                <img src="images/tea.png" alt="tea" class="imgs">
-                <p class="imgTitle">interactive site</p>
-            </a>
-        </section>
-
-        <section class="proj">
-            <a href="illust.html">
-                <img src="images/winter.png" alt="winter" class="imgs">
-                <p class="imgTitle">illustrations</p>
-            </a>
-        </section>
-        
-        <section class="proj">
-            <a href="crafts.html">
-                <img src="images/pirate.png" alt="pcave" class="imgs">
-                <p class="imgTitle">paper crafts</p>
+            <a href="logo.html">
+                <img src="images/appLogo.png" alt="app logo" class="imgs">
+                <p class="imgTitle">guild logo</p>
             </a>
         </section>
 
