--- a/illust.html
+++ b/illust.html
@@ -44,39 +44,33 @@
 
     <main>
         <section class="proj">
-            <a href="graphic.html">
-                <img src="images/gs.png" alt="graphic standard" class="imgs">
-                <p id="gsTitle" class="imgTitle">graphic design</p>
-            </a>
-        </section>
-
-        <section class="proj">
-            <a href="fashion.html">
-                <img src="images/fashion.png" alt="fashion des" class="imgs">
-                <p class="imgTitle">fashion design</p>
-            </a>
-        </section>
-
-        <section class="proj">
-            <a href="tea.html">
-                <img src="images/tea.png" alt="tea" class="imgs">
-                <p class="imgTitle">interactive site</p>
-            </a>
-        </section>
-
-        <section class="proj">
-            <a href="illust.html">
+            <a href="winter.html">
                 <img src="images/winter.png" alt="winter" class="imgs">
-                <p class="imgTitle">illustrations</p>
+                <p class="imgTitle">winter thessal</p>
+            </a>
+        </section>
+
+        <section class="proj">
+            <a href="char.html">
+                <img src="images/char.png" alt="fashion des" class="imgs">
+                <p class="imgTitle">snowland priestess</p>
+            </a>
+        </section>
+
+        <section class="proj">
+            <a href="manga.html">
+                <img src="images/man.png" alt="manga" class="imgs">
+                <p class="imgTitle">knight goes in for the stun</p>
+            </a>
+        </section>
+
+        <section class="proj">
+            <a href="oryxGang.html">
+                <img src="images/oryx.png" alt="oryx banner" class="imgs"> 
+                <p class="imgTitle">oryx's sanctuary</p>
             </a>
         </section>
         
-        <section class="proj">
-            <a href="crafts.html">
-                <img src="images/pirate.png" alt="pcave" class="imgs">
-                <p class="imgTitle">paper crafts</p>
-            </a>
-        </section>
 
     </main>
 
