--- a/crafts.html
+++ b/crafts.html
@@ -44,39 +44,33 @@
 
     <main>
         <section class="proj">
-            <a href="graphic.html">
-                <img src="images/gs.png" alt="graphic standard" class="imgs">
-                <p id="gsTitle" class="imgTitle">graphic design</p>
+            <a href="pirate.html">
+                <img src="images/pirate.png" alt="pcave" class="imgs">
+                <p class="imgTitle">pirate cake</p>
             </a>
         </section>
 
         <section class="proj">
-            <a href="fashion.html">
-                <img src="images/fashion.png" alt="fashion des" class="imgs">
-                <p class="imgTitle">fashion design</p>
+            <a href="thessalP.html">
+                <img src="images/craftEntry.png" alt="thessal paper" class="imgs">
+                <p class="imgTitle">thessal paper</p>
             </a>
         </section>
 
         <section class="proj">
-            <a href="tea.html">
-                <img src="images/tea.png" alt="tea" class="imgs">
-                <p class="imgTitle">interactive site</p>
+            <a href="totalia.html">
+                <img src="images/totalia.png" alt="totalia paper" class="imgs">
+                <p class="imgTitle">totalia paper</p>
             </a>
         </section>
 
         <section class="proj">
-            <a href="illust.html">
-                <img src="images/winter.png" alt="winter" class="imgs">
-                <p class="imgTitle">illustrations</p>
+            <a href="spooky.html">
+                <img src="images/spooky.png" alt="shoe" class="imgs"> 
+                <p class="imgTitle">haunted cemetary</p>
             </a>
         </section>
         
-        <section class="proj">
-            <a href="crafts.html">
-                <img src="images/pirate.png" alt="pcave" class="imgs">
-                <p class="imgTitle">paper crafts</p>
-            </a>
-        </section>
 
     </main>
 
