--- a/gs.html
+++ b/gs.html
@@ -47,7 +47,7 @@
         <img src="images/graphic.png" alt="graphicStandard" class="infoPic">
 
         <div class="projDiv">
-            <p class="desc">This project, done over the course of a graphic design class, focused on designing the graphic elements for a theoretical brand. We were tasked with creating a brand for some insect-based food product, and the respective imagery/branding associated with it. <a href="https://issuu.com/emmamchoi/docs/graphicstandard" class="pageLink">Here</a> is the culmination of my project.</p>
+            <p class="desc">This project, done over the course of a graphic design class, focused on designing the graphic elements for a theoretical brand. We were tasked with creating a brand for some insect-based food product, and the respective imagery/branding associated with it. Throughout the quarter we had class and instructor discussion sessions where we worked to take in feedback and improve our designs. <a href="https://issuu.com/emmamchoi/docs/graphicstandard" class="pageLink">Here</a> is the culmination of my project.</p>
             <p class="desc">Adobe Photoshop, Illustrator, InDesign; spring 2021</p>
         </div>
         
