--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
         </section>
 
         <section class="proj">
-            <a href="tea.html">
+            <a href="interact.html">
                 <img src="images/tea.png" alt="tea" class="imgs">
-                <p class="imgTitle">interactive site</p>
+                <p class="imgTitle">interactive media</p>
             </a>
         </section>
 
