--- a/interact.html
+++ b/interact.html
@@ -44,30 +44,16 @@
 
     <main>
         <section class="proj">
-            <a href="gs.html">
-                <img src="images/gs.png" alt="graphic standard" class="imgs">
-                <p class="imgTitle">graphic standard</p>
+            <a href="tea.html">
+                <img src="images/tea.png" alt="tea final site" class="imgs">
+                <p class="imgTitle">interactive site</p>
             </a>
         </section>
 
         <section class="proj">
-            <a href="logo.html">
-                <img src="images/appLogo.png" alt="app logo" class="imgs">
-                <p class="imgTitle">guild logo</p>
-            </a>
-        </section>
-
-        <section class="proj">
-            <a href="typeFin.html">
-                <img src="images/covid.png" alt="covid journal" class="imgs">
-                <p class="imgTitle">covid journal</p>
-            </a>
-        </section>
-
-        <section class="proj">
-            <a href="frut.html">
-                <img src="images/frutiger.png" alt="frutiger poster" class="imgs">
-                <p class="imgTitle">frutiger study</p>
+            <a href="trash.html">
+                <img src="images/trash.png" alt="trash game" class="imgs">
+                <p class="imgTitle">trash</p>
             </a>
         </section>
 
