--- a/illust.html
+++ b/illust.html
@@ -43,6 +43,14 @@
     </header>
 
     <main>
+        
+        <section class="proj">
+            <a href="shatts.html">
+                <img src="images/shatts.png" alt="shatts" class="imgs">
+                <p class="imgTitle">shatters icon</p>
+            </a>
+        </section>
+        
         <section class="proj">
             <a href="winter.html">
                 <img src="images/winter.png" alt="winter" class="imgs">
