--- a/interact.html
+++ b/interact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
 
-    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@300;400;600&display=swap" rel="stylesheet">
 
     <link href="styles.css" rel="stylesheet">
 
@@ -47,6 +47,13 @@
             <a href="tea.html">
                 <img src="images/tea.png" alt="tea final site" class="imgs">
                 <p class="imgTitle">interactive site</p>
+            </a>
+        </section>
+
+        <section class="proj">
+            <a href="app.html">
+                <img src="images/app.png" alt="ui/ux" class="imgs">
+                <p class="imgTitle">market app</p>
             </a>
         </section>
 
