--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     
-    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@300;400;600&display=swap" rel="stylesheet">
 
     <link href="styles.css" rel="stylesheet">
 
@@ -45,19 +45,23 @@
     <main>
         <div id="titleDiv">
             <h2 id="title">Hi, I'm Emma</h2>
+
+            <img src="images/profileIRL.png" alt="prof pic" id="pfp">
             <img src="images/profile.png" alt="profile" id="profile">
         </div>
 
         <div class="descDiv">
-            <p class="desc">I graduated from UC Davis 2021 with a degree in Design + minor in Computer Science. I'm open to learning more about just about any design field. I personally enjoy illustrating, for projects or in my free time. </p>
-            <p class="desc">As seen in this site, I have a basic knowledge of HTML/CSS/JS. It's been a while, but in terms of programming I have learned a bit in Python and C++.</p>
+            <p class="desc">I graduated from UC Davis 2021 with a degree in Design + minor in Computer Science. I'm open to learning more about just about any design field. I personally enjoy illustrating, for projects or in my free time. My projects may also include paper craft, which I include here for some fun/a display of my creation process in other medias.</p>
+
+            <p class="desc">As seen in this site, I have a basic knowledge of HTML/CSS/JS. It's been a while, but in terms of programming I have learned a bit in Python and C++. I primarily work in Adobe Photoshop for illustrations, but have done some work in Illustrator and InDesign. Occasionally I have worked with video in Premier and After Effects.</p>
+
             <p class="desc">That's tea in the drawing, because I quite enjoy tea (unsweetened oolong with light ice is where it's at).</p>
         </div>
         
 
     </main>
     <footer>
-
+        <p>Emma Choi 2022</p>
     </footer>
 
     <script src="script.js"></script>
