--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
 
-    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@300;400;600&display=swap" rel="stylesheet">
 
     <link href="styles.css" rel="stylesheet">
 
@@ -51,16 +51,16 @@
         </section>
 
         <section class="proj">
-            <a href="fashion.html">
-                <img src="images/fashion.png" alt="fashion des" class="imgs">
-                <p class="imgTitle">fashion design</p>
+            <a href="interact.html">
+                <img src="images/tea.png" alt="tea" class="imgs">
+                <p class="imgTitle">interactive media</p>
             </a>
         </section>
 
         <section class="proj">
-            <a href="interact.html">
-                <img src="images/tea.png" alt="tea" class="imgs">
-                <p class="imgTitle">interactive media</p>
+            <a href="fashion.html">
+                <img src="images/fashion.png" alt="fashion des" class="imgs">
+                <p class="imgTitle">fashion design</p>
             </a>
         </section>
 
