--- a/pirate.html
+++ b/pirate.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
 
-    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@300;400;600&display=swap" rel="stylesheet">
 
     <link href="styles.css" rel="stylesheet">
 
@@ -49,7 +49,8 @@
         <div class="projDiv">
             <p class="desc">I crafted this piece for a Realm of the Mad God cake design contest. The prompt was to design a cake related to the game, in any medium. I chose paper as it would give me an opportunity to make it physical without actually baking a cake. I chose to theme my design around one of the lowest-level (if not the lowest) dungeons, the <a href="https://www.realmeye.com/wiki/pirate-cave" class="pageLink">Pirate Cave</a>. The dungeon consists mostly of sandy-looking land pieces and ships, surrounded by a bright, nearly crystalline water. </p>
 
-            <p class="desc">I first made a base shape for the cake out of lined paper, then added the colored cardstock on top. The small decorations seen (palm trees, seashells, flag, anchor) were taken from the dungeon's occurring beach decorations as well. The top rug, detailed in pen, represents the boss room. The pirate slurp seen atop the cake is a pet skin drop from <a href="https://www.realmeye.com/wiki/dreadstump-the-pirate-king" class="pageLink">the boss</a>. For the cake itself, I decided a light, vanilla-like cake with a blue frosting would work well with the decorations. Additinally, the surrounding water decorations adds to the beach theme.</p>
+            <p class="desc">I first made a base shape for the cake out of lined paper, then added the colored cardstock on top. I incorporated 3 main parts of the dungeon into the design: the sand/beach, the water, and the boss area. The cake is on top of/surrounded by the water decoration, while the side of the cake is inspired by the beach areas. The top rug, detailed in pen, was inspired by the interior of the boss room. The pirate slurp seen atop the cake is a pet skin drop from <a href="https://www.realmeye.com/wiki/dreadstump-the-pirate-king" class="pageLink">the boss</a>. For the "cake" itself, I decided a light, vanilla-like cake with a blue frosting would work well with the decorations.</p>
+
             <p class="desc">This cake placed 1st out of 10, and I was pretty satisfied with the product. Having the subject be the Pirate Cave is not too common an occurrence, for either me or other creators in the RotMG community. I think this project helped me appreciate the aesthetics of the Pirate Cave more, as even though it is very low-level content, it still required a lot of work to make (so good job for the artists on that one!). This was another slightly new adventure in paper crafting for me, as I've done some 3D pieces and work, but nothing quite like this.</p>
 
             <p class="desc">Colored cardstock, pen; September 2020</p>
@@ -61,6 +62,7 @@
         <p>Emma Choi 2022</p>
     </footer>
 
+    <script src="script.js"></script>
 </body>
     
 
