--- a/sumref.html
+++ b/sumref.html
@@ -42,16 +42,16 @@
     </header>
 
     <main class="projPage">
-        <h2 class="projTitle">factory farming</h2>
+        <h2 class="projTitle">character study</h2>
 
-        <img src="images/farm.png" alt="farm vid" class="infoPic">
+        <img src="images/summon.png" alt="summoner" class="infoPic">
 
         <div class="projDiv">
-            <p class="desc">I created <a href="https://filmfreeway.com/projects/2150956" class="pageLink">this video</a> for a motion graphics class, on the topic of the environmental impact of factory farming. Inspired by some previous research I'd done, I thought this topic could be interesting to explore, both informationally and graphically.</p>
+            <p class="desc">I made this character reference/study of my original character, a mad scientist-type character. Mostly a static reference, I worked to show her outfit and body details. Her right hand is bionic, but the rest of her body is not entirely organic either. The markings on her body are not always visible, but cover most of the surface.</p>
 
-            <p class="desc">I kept to two fonts: monospaced Courier and sans serif Spartan (Bold). I made some assets, like the farm animals, in Photoshop. This project was a culmination of what I'd learned through this class in After Effects and motion graphics.</p>
+            <p class="desc">Her outfits remain relatively simple, consisting of solid colors. For her base outfit, she wears a robe over loose pants, with platform boots and goggles. Her long hair is loosely tied back, but is probably not to precise safety protocols (not like she cares too much). The top corner shows an example of a casual outfit. She is a relatively carefree person, and is mostly quite kind. While she is generally chill, she is enthusiastic about her interests, perhaps there is still a "mad" side to her.</p>
 
-            <p class="desc">Adobe After Effects, Photoshop; March 2021</p>
+            <p class="desc">Adobe Photoshop; January 2022</p>
         
         </div>
         
