--- a/oryxGang.html
+++ b/oryxGang.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
 
-    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@300;400;600&display=swap" rel="stylesheet">
 
     <link href="styles.css" rel="stylesheet">
 
@@ -60,6 +60,7 @@
         <p>Emma Choi 2022</p>
     </footer>
 
+    <script src="script.js"></script>
 </body>
     
 
