--- a/totalia.html
+++ b/totalia.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
 
-    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@300;400;600&display=swap" rel="stylesheet">
 
     <link href="styles.css" rel="stylesheet">
 
@@ -42,7 +42,7 @@
     </header>
 
     <main class="projPage">
-        <h2 class="projTitle">totalia papercraft</h2>
+        <h2 class="projTitle">totalia paper</h2>
 
         <img src="images/totalia.png" alt="paper totalia" class="infoPic">
 
@@ -58,6 +58,7 @@
         <p>Emma Choi 2022</p>
     </footer>
 
+    <script src="script.js"></script>
 </body>
     
 
