--- a/fashion.html
+++ b/fashion.html
@@ -52,6 +52,13 @@
         </section>
 
         <section class="proj">
+            <a href="cosplay.html">
+                <img src="images/thessPet.png" alt="fashion des" class="imgs">
+                <p class="imgTitle">thessal cosplay</p>
+            </a>
+        </section>
+
+        <section class="proj">
             <a href="shoe.html">
                 <img src="images/shoe.png" alt="shoe" class="imgs">
                 <p class="imgTitle">oryx boots</p>
