--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
         <div class="descDiv">
             <p class="desc">I graduated from UC Davis 2021 with a degree in Design + minor in Computer Science. I'm open to learning more about just about any design field. I personally enjoy illustrating, for projects or in my free time. My projects may also include paper craft, which I include here for some fun/a display of my creation process in other medias.</p>
 
-            <p class="desc">As seen in this site, I have a basic knowledge of HTML/CSS/JS. It's been a while, but in terms of programming I have learned a bit in Python and C++. I primarily work in Adobe Photoshop for illustrations, but have done some work in Illustrator and InDesign. Occasionally I have worked with video in Premier and After Effects.</p>
+            <p class="desc">As seen in this site, I have a basic knowledge of HTML/CSS/JS. It's been a while, but in terms of programming I have learned a bit in Python and C++. I primarily use Adobe Photoshop for illustrations, but have done some design work in Illustrator and InDesign. I have also done a handful of video projects with Premier and After Effects.</p>
 
             <p class="desc">That's tea in the drawing, because I quite enjoy tea (unsweetened oolong with light ice is where it's at).</p>
         </div>
